# Chess

./: Board.h  CMakeLists.txt  README.md  chess
headers/: Board.h  Cell.h  Square.h
source/: Board.cpp  Square.cpp  main.cpp
